# zone-split

./: CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
src/: hook.rs  lib.rs  main.rs  monitor.rs  ops.rs  overlay.rs  persistence.rs  snap.rs  tray.rs  wm.rs  zones.rs
tests/: hook_integration.rs  persistence_integration.rs
