[package]
name = "zone-split"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zone-split"
path = "src/main.rs"

[lib]
name = "zone_split"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
